@@ -1,3 +1,5 @@
+HEAD
+	+ Fixed bug when altering mail account in formulary
 3.2.10
 	+ Added and used checkMailNotInUse method
 3.2.9
